--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,2 +1,5 @@
 - name: Chill Magic's blog
-  url: http://chillmagic.github.io
+  url: https://chillmagic.github.io
+
+- name: ice1000's blog
+  url: https://ice1000.github.io
